syntax = "proto3";

option go_package = "github.com/alserov/device-shop/proto/gen/user";

package user;

service Users {
  rpc TopUpBalance(BalanceReq) returns(BalanceRes);
  rpc DebitBalance(BalanceReq) returns(BalanceRes);

  rpc Signup(SignupReq) returns (SignupRes);
  rpc Login(LoginReq) returns (LoginRes);
  rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoRes);
  rpc CheckIfAdmin(CheckIfAdminReq) returns (CheckIfAdminRes);
}

message CheckIfAdminReq {
  string UserUUID = 1;
}

message CheckIfAdminRes {
  bool IsAdmin = 1;
}

message GetUserInfoReq {
  string UserUUID = 1;
}

message GetUserInfoRes {
  string Username = 1;
  string Email = 2;
  string UUID = 3;
  float  Cash = 4;
}

message SignupRes {
  string Username = 1;
  string Email = 2;
  string UUID = 3;
  float  Cash = 4;
  string RefreshToken = 5;
  string Token = 6;
}

message SignupReq {
  string Username = 1;
  string Password = 2;
  string Email = 3;
}

message LoginRes {
  string RefreshToken = 1;
  string Token = 2;
  string UUID = 3;
}

message LoginReq {
  string Username = 1;
  string Password = 2;
}

message BalanceReq {
  float Cash = 1;
  string UserUUID = 2;
}

message BalanceRes {
  float Cash = 1;
}
